--- a/mxrplugindemo/Info.plist
+++ b/mxrplugindemo/Info.plist
@@ -20,6 +20,11 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>app请求开启摄像头，建议开启。</string>
 	<key>UILaunchStoryboardName</key>
